[package]
name = "ricekube"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.64.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
futures = "0.3.17"
tokio = { version = "1.14.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
